--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Image Section -->
     <section>
         <h2>Our Image</h2>
-         <img src="C:\Users\shiva\OneDrive\Documents\Web\Assignments\Assignment-1\earth.jpg" height="400" width="400">
+         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/1024px-The_Earth_seen_from_Apollo_17.jpg" height="400" width="400">
     </section>
 
     <!-- Services Section -->
